--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,8 @@
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
@@ -147,3 +148,7 @@ fabric.properties
 .idea/**/azureSettings.xml
 
 # End of https://www.toptal.com/developers/gitignore/api/macos,phpstorm
+/package.json
+/package-lock.json
+/webpack.config.js
+/src/
